--- a/package.json
+++ b/package.json
@@ -41,64 +41,60 @@
     "index.js"
   ],
   "dependencies": {
-    "@ljharb/eslint-config": "^14.1.0",
-    "eslint-config-prettier": "^6.2.0"
+    "@ljharb/eslint-config": "*",
+    "eslint-config-prettier": "*"
   },
   "devDependencies": {
-    "@types/node": "^12.7.4",
-    "@types/webpack": "^4.39.1",
-    "@xotic750/eslint-find-rules": "^4.2.0",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.3.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-loader": "^3.0.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-compat": "^3.3.0",
-    "eslint-plugin-css-modules": "^2.11.0",
-    "eslint-plugin-eslint-comments": "^3.1.2",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jest": "^22.17.0",
-    "eslint-plugin-jsdoc": "^15.9.1",
-    "eslint-plugin-json": "^1.4.0",
-    "eslint-plugin-lodash": "^6.0.0",
-    "eslint-plugin-no-use-extend-native": "^0.4.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-switch-case": "^1.1.2",
-    "in-publish": "^2.0.0",
-    "prettier": "^1.18.2",
-    "safe-publish-latest": "^1.1.3",
-    "typescript": "^3.6.2",
-    "webpack": "^4.39.3"
+    "@types/node": "*",
+    "@types/webpack": "*",
+    "@xotic750/eslint-find-rules": "*",
+    "babel-eslint": "*",
+    "eslint": "*",
+    "eslint-friendly-formatter": "*",
+    "eslint-import-resolver-webpack": "*",
+    "eslint-loader": "*",
+    "eslint-plugin-babel": "*",
+    "eslint-plugin-compat": "*",
+    "eslint-plugin-css-modules": "*",
+    "eslint-plugin-eslint-comments": "*",
+    "eslint-plugin-html": "*",
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jest": "*",
+    "eslint-plugin-jsdoc": "*",
+    "eslint-plugin-json": "*",
+    "eslint-plugin-lodash": "*",
+    "eslint-plugin-no-use-extend-native": "*",
+    "eslint-plugin-prettier": "*",
+    "eslint-plugin-promise": "*",
+    "eslint-plugin-switch-case": "*",
+    "in-publish": "*",
+    "prettier": "*",
+    "safe-publish-latest": "*",
+    "typescript": "*",
+    "webpack": "*"
   },
   "peerDependencies": {
-    "babel-eslint": "^10",
-    "eslint": "^5.16.0 || ^6",
-    "eslint-friendly-formatter": "^4",
-    "eslint-import-resolver-webpack": "^0",
-    "eslint-loader": "^2.2.1 || ^3",
-    "eslint-plugin-babel": "^5",
-    "eslint-plugin-compat": "^3",
-    "eslint-plugin-css-modules": "^2",
-    "eslint-plugin-eslint-comments": "^3",
-    "eslint-plugin-html": "^6",
-    "eslint-plugin-import": "^2",
-    "eslint-plugin-jest": "^22",
-    "eslint-plugin-jsdoc": "^15",
-    "eslint-plugin-json": "^1",
-    "eslint-plugin-lodash": "^5.1.1 || ^6",
-    "eslint-plugin-no-use-extend-native": "^0",
-    "eslint-plugin-prettier": "^3",
-    "eslint-plugin-promise": "^4",
-    "eslint-plugin-switch-case": "^1",
-    "prettier": "^1",
-    "webpack": "^4"
-  },
-  "engines": {
-    "node": ">=8.11.4",
-    "npm": "6.10.1"
+    "babel-eslint": "*",
+    "eslint": "*",
+    "eslint-friendly-formatter": "*",
+    "eslint-import-resolver-webpack": "*",
+    "eslint-loader": "*",
+    "eslint-plugin-babel": "*",
+    "eslint-plugin-compat": "*",
+    "eslint-plugin-css-modules": "*",
+    "eslint-plugin-eslint-comments": "*",
+    "eslint-plugin-html": "*",
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jest": "*",
+    "eslint-plugin-jsdoc": "*",
+    "eslint-plugin-json": "*",
+    "eslint-plugin-lodash": "*",
+    "eslint-plugin-no-use-extend-native": "*",
+    "eslint-plugin-prettier": "*",
+    "eslint-plugin-promise": "*",
+    "eslint-plugin-switch-case": "*",
+    "prettier": "*",
+    "webpack": "*"
   },
   "browserslist": [
     "last 3 Chrome versions",
